# steelCalc

./: .gitignore  CMakeLists.txt  CustomEventScheduler.cpp  CustomEventScheduler.h  CustomGridCellEditor.cpp  CustomGridCellEditor.h  DatabaseViewer.cpp  DatabaseViewer.h  MyApp.cpp  MyApp.h  README.md  ResultSetGrid.cpp  ResultSetGrid.h  SteelCalcBase.cpp  SteelCalcBase.fbp  SteelCalcBase.h  SteelCalcDatabaseViewer.cpp  SteelCalcDatabaseViewer.h  SteelCalcMain.cpp  SteelCalcMain.h  SteelCalcOptions.cpp  SteelCalcOptions.h  database.sq3  main.cpp
